--- a/index.html
+++ b/index.html
@@ -309,7 +309,14 @@
             <!-- Header -->
             <div class="genie-chat-header">
                 <h3>Ask Genie about F1</h3>
-                <button class="genie-close-btn" id="genie-close-btn" aria-label="Close chat">&times;</button>
+                <div class="genie-header-buttons">
+                    <button class="genie-clear-btn" id="genie-clear-btn" aria-label="Clear conversation" title="Start new conversation">
+                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"/>
+                        </svg>
+                    </button>
+                    <button class="genie-close-btn" id="genie-close-btn" aria-label="Close chat">&times;</button>
+                </div>
             </div>
 
             <!-- Messages Container - Scrollable area for conversation -->
